DEBUG_SERVER.txt
D:\fullstack\proj2\server\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: Γ¿» Unable to compile TypeScript:
src/controller/teacher/teacherController.ts(43,60): error TS2353: Object literal may only specify known properties, and 'instituteNumber' does not exist in type 'TokenPayload'.

    at createTSError (D:\fullstack\proj2\server\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (D:\fullstack\proj2\server\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (D:\fullstack\proj2\server\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (D:\fullstack\proj2\server\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (D:\fullstack\proj2\server\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1893:10
    at Object.require.extensions.<computed> [as .ts] (D:\fullstack\proj2\server\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2353 ]
}
